app-deployment/flaskapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deployment
  labels:
    app: flaskapp
spec:
  replicas: 1 # Runs two copies of your app for high availability
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: flaskapp:c0ebc6f68aff5c8de6b642e9f455f95c33f2401f
        imagePullPolicy: IfNotPresent # Tells k3s to use the locally imported image if available
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
spec:
  selector:
    app: flaskapp
  ports:
    - protocol: TCP
      port: 8080        # The port the service listens on inside the cluster
      targetPort: 5000 # The port your Flask container is listening on
